Fixed signup form spacing

--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -15,7 +15,11 @@
 
 .register-container {
   flex: 0 0 50%;
-  height: 100%; /* Adjust height to take up full viewport */
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .signup-form {
@@ -24,7 +28,7 @@
   width: 600px;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
